NavigationSimulator: add support for GlobalRequestIds

This adds support for both the PlzNavigate and non-PlzNavigate paths,
and ensures that TestNavigationURLLoader always uses a non default one.

BUG=680841,711352

Review-Url: https://codereview.chromium.org/2885453003
Cr-Commit-Position: refs/heads/master@{#472093}

Former-commit-id: 50996ef01397fc67caece4810a2c51f91f926cdb